--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
       rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
   </head>
-  <body class="dark-mode overflow-hidden">
+  <body class="dark-mode">
     <nav class="navbar px-4">
       <span class="navbar-brand mx-auto fw-bold">CHAT‑BOT</span>
       <label class="theme-switch">
